--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,6 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="utmg.android_interface.activity.MainActivity">
@@ -102,51 +101,33 @@
         android:text="PREVIEW"/>
 
     <LinearLayout
-        android:id="@+id/linLay"
+        android:id="@+id/canvas_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:orientation="horizontal">
-
-        <utmg.android_interface.view.canvas.DrawingCanvas
-            android:id="@+id/signature_canvas"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/canvas_border"
-            android:clickable="false"
-            android:textColor="#FFFFFF" />
-
     </LinearLayout>
 
-
-
-    <com.getbase.floatingactionbutton.FloatingActionsMenu
-        android:id="@+id/fab"
+    <LinearLayout
+        android:id="@+id/send_trajectories_menu_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:orientation="horizontal"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_gravity="bottom|right"
-        android:layout_margin="@dimen/fab_margin"
-        fab:fab_addButtonColorNormal="@android:color/holo_orange_dark"
-        fab:fab_colorPressed="@android:color/holo_orange_light"
-        fab:fab_icon="@android:drawable/ic_menu_send"
-        fab:fab_expandDirection="left" />
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin" >
+    </LinearLayout>
 
-
-    <com.getbase.floatingactionbutton.FloatingActionsMenu
-        android:id="@+id/fab_clear"
+    <LinearLayout
+        android:id="@+id/clear_trajectories_menu_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:orientation="horizontal"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_gravity="bottom|left"
-        android:layout_margin="@dimen/fab_margin"
-        fab:fab_addButtonColorNormal="@android:color/holo_purple"
-        fab:fab_colorPressed="@android:color/holo_orange_light"
-        fab:fab_icon="@android:drawable/ic_menu_close_clear_cancel"
-        fab:fab_expandDirection="right" />
+        android:layout_gravity="bottom|start"
+        android:layout_margin="@dimen/fab_margin" >
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
