--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -42,7 +42,7 @@
         android:layout_centerInParent="true"/>
 
     <LinearLayout
-        android:id="@+id/linLay"
+        android:id="@+id/canvas_container"
         android:layout_width="655dp"
         android:layout_height="396dp"
         android:layout_gravity="center_horizontal|top"
