--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     tools:context="utmg.android_interface.activity.MainActivity">
 
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
@@ -34,7 +35,8 @@
             android:layout_below="@id/toolbarLayout"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="center">
 
             <Button
                 android:id="@+id/kill_button"
@@ -42,13 +44,29 @@
                 android:layout_height="match_parent"
                 android:backgroundTint="@android:color/holo_red_dark"
                 android:textColor="@android:color/white"
+                android:layout_gravity="left"
+                android:layout_weight="1"
                 android:text="Terminate App" />
 
             <RadioGroup
                 android:id="@+id/select_trajectory_group"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:gravity="center_horizontal"
+                android:layout_gravity="center"
+                android:layout_weight="1"
                 android:orientation="horizontal" />
+
+            <Button
+                android:id="@+id/send_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:backgroundTint="@android:color/holo_blue_dark"
+                android:textColor="@android:color/white"
+                android:layout_gravity="right"
+                android:layout_weight="1"
+                android:text="Send Trajectories" />
+
         </LinearLayout>
 
     </RelativeLayout>
@@ -82,14 +100,6 @@
             android:background="@drawable/altitude_seekbar"
             />
     </FrameLayout>
-
-    <!--<TextView-->
-        <!--android:id="@+id/dimension_text"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center|bottom"-->
-        <!--android:layout_marginBottom="15dp"-->
-        <!--android:text="New Dimensions"/>-->
 
     <!--<Button-->
         <!--android:id="@+id/previewButton"-->
@@ -130,5 +140,15 @@
         <!--android:layout_alignParentStart="true"-->
         <!--android:layout_alignParentTop="true"-->
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/dimension_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:layout_gravity="center|bottom"
+        android:text="Arena Dimensions"/>
+
+
 
 </android.support.design.widget.CoordinatorLayout>
