--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,12 @@
     android:layout_height="match_parent"
     tools:context="utmg.android_interface.activity.MainActivity">
 
-
-    <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+        <!--APP BAR-->
         <android.support.design.widget.AppBarLayout
             android:id="@+id/toolbarLayout"
             android:layout_width="match_parent"
@@ -26,129 +26,181 @@
                 android:background="?attr/colorPrimary"
                 android:elevation="14dp"
                 android:minHeight="170dp"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+                app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
         </android.support.design.widget.AppBarLayout>
 
-
+        <!--TOOL BAR-->
         <LinearLayout
-            android:layout_below="@id/toolbarLayout"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:layout_height="60dp"
+            android:layout_below="@id/toolbarLayout"
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/kill_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:backgroundTint="@android:color/holo_red_dark"
-                android:textColor="@android:color/white"
                 android:layout_gravity="left"
                 android:layout_weight="1"
-                android:text="Terminate App" />
+                android:backgroundTint="@android:color/holo_red_dark"
+                android:text="Terminate App"
+                android:textColor="@android:color/white"/>
 
             <RadioGroup
                 android:id="@+id/select_trajectory_group"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center_horizontal"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:orientation="horizontal" />
+                android:gravity="center_horizontal|center_vertical"
+                android:orientation="horizontal"/>
 
             <Button
                 android:id="@+id/send_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:backgroundTint="@android:color/holo_blue_dark"
-                android:textColor="@android:color/white"
                 android:layout_gravity="right"
                 android:layout_weight="1"
-                android:text="Send Trajectories" />
+                android:backgroundTint="@android:color/holo_green_dark"
+                android:text="Send Trajectories"
+                android:textColor="@android:color/white"/>
 
         </LinearLayout>
 
-    </RelativeLayout>
+        <!-- USE THIS TO PAD THE CANVAS AREA-->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:layout_weight="0"/>
 
-    <TextView
-        android:id="@+id/seekbar_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
-        android:layout_marginLeft="75dp"
-        android:layout_marginTop="250dp"
-        android:text="0"
-        android:textSize="20dp" />
+        <!--CANVAS AREA-->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1">
+            <!--Ensure that the layout weight above is one to make canvas fill to bottom-->
 
-    <FrameLayout
-        android:id="@+id/slider_frame_layout"
-        android:layout_width="30dp"
-        android:layout_height="400dp"
-        android:orientation="vertical"
-        android:layout_marginLeft="40dp"
-        android:layout_gravity="center|left">
+            <!--SLIDER BAR-->
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true">
 
-        <SeekBar
-            android:id="@+id/slider"
-            android:layout_width="300dp"
-            android:layout_height="20dp"
-            android:layout_gravity="center"
-            android:max="2"
-            android:rotation="270"
-            android:thumb="@drawable/altitude_seekbar_thumb"
-            android:background="@drawable/altitude_seekbar"
-            />
-    </FrameLayout>
+                <FrameLayout
+                    android:id="@+id/slider_frame_layout"
+                    android:layout_width="30dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="20dp"
+                    android:orientation="vertical"
+                    android:layout_centerVertical="true">
 
-    <!--<Button-->
-        <!--android:id="@+id/previewButton"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center|bottom"-->
-        <!--android:layout_marginBottom="35dp"-->
-        <!--android:backgroundTint="@color/colorPrimary"-->
-        <!--android:textColor="@android:color/white"-->
-        <!--android:text="PREVIEW"/>-->
+                    <SeekBar
+                        android:id="@+id/slider"
+                        android:layout_width="300dp"
+                        android:layout_height="20dp"
+                        android:layout_gravity="center"
+                        android:background="@drawable/altitude_seekbar"
+                        android:max="2"
+                        android:rotation="270"
+                        android:thumb="@drawable/altitude_seekbar_thumb"
+                        />
+                </FrameLayout>
 
-    <LinearLayout
-        android:id="@+id/canvas_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/seekbar_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="0"
+                    android:layout_toEndOf="@+id/slider_frame_layout"
+                    android:textSize="20sp"/>
+                <!--android:layout_marginBottom="100dp"-->
+                <!--android:layout_marginLeft="75dp"-->
+                <!--android:layout_marginTop="250dp"-->
+
+            </RelativeLayout>
+
+            <!--PLACE WHERE CANVAS GOES-->
+            <LinearLayout
+                android:id="@+id/canvas_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_centerInParent="true"
+                android:orientation="horizontal">
+            </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true">
+
+                <!--CLEAR TRAJECTORIES MENU-->
+                <LinearLayout
+                    android:id="@+id/clear_trajectories_menu_container"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/fab_margin"
+                    android:layout_centerVertical="true"
+                    android:orientation="vertical">
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_above="@+id/clear_trajectories_menu_container"
+                    android:textColor="@android:color/black"
+                    android:textSize="25sp"
+                    android:text="Clear"/>
+            </RelativeLayout>
+
+        </RelativeLayout>
+
+        <!-- USE THIS TO PAD THE CANVAS AREA-->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:layout_weight="0"/>
+
     </LinearLayout>
-
-    <!--<LinearLayout-->
-        <!--android:id="@+id/send_trajectories_menu_container"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="horizontal"-->
-        <!--android:layout_alignParentEnd="true"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_gravity="bottom|end"-->
-        <!--android:layout_margin="@dimen/fab_margin" >-->
-    <!--</LinearLayout>-->
-
-    <LinearLayout
-        android:id="@+id/clear_trajectories_menu_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center|right"
-        android:layout_margin="@dimen/fab_margin" >
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:layout_alignParentTop="true"-->
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/dimension_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:layout_gravity="center|bottom"
-        android:text="Arena Dimensions"/>
-
-
 
 </android.support.design.widget.CoordinatorLayout>
+
+<!--<TextView-->
+<!--android:id="@+id/dimension_text"-->
+<!--android:layout_width="wrap_content"-->
+<!--android:layout_height="wrap_content"-->
+<!--android:layout_gravity="center|bottom"-->
+<!--android:layout_marginBottom="15dp"-->
+<!--android:text="Arena Dimensions"/>-->
+
+
+    <!--<Button-->
+    <!--android:id="@+id/previewButton"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="center|bottom"-->
+    <!--android:layout_marginBottom="35dp"-->
+    <!--android:backgroundTint="@color/colorPrimary"-->
+    <!--android:textColor="@android:color/white"-->
+    <!--android:text="PREVIEW"/>-->
+
+    <!--<LinearLayout-->
+    <!--android:id="@+id/send_trajectories_menu_container"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:orientation="horizontal"-->
+    <!--android:layout_alignParentEnd="true"-->
+    <!--android:layout_alignParentTop="true"-->
+    <!--android:layout_gravity="bottom|end"-->
+    <!--android:layout_margin="@dimen/fab_margin" >-->
+    <!--</LinearLayout>-->
