Updated the config file to support strings and ints now

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -153,6 +153,28 @@
                             android:inputType="numberDecimal"/>
                     </android.support.design.widget.TextInputLayout>
 
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <EditText
+                            android:id="@+id/hostname_setting_box"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="Hostname"
+                            android:inputType="text"/>
+                    </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <EditText
+                            android:id="@+id/port_setting_box"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="Port"
+                            android:inputType="number"/>
+                    </android.support.design.widget.TextInputLayout>
+
                     <Button
                         android:id="@+id/apply_button"
                         android:layout_width="match_parent"
