--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,11 +38,21 @@
             android:gravity="center"
             android:orientation="horizontal">
 
+            <Button
+                android:id="@+id/add_obstacle_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="start"
+                android:layout_weight="1"
+                android:backgroundTint="@android:color/holo_orange_light"
+                android:text="Add Obstacle"
+                android:textColor="@android:color/white"/>
+
             <RadioGroup
                 android:id="@+id/select_trajectory_group"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_gravity="start"
+                android:layout_gravity="center"
                 android:layout_weight="1"
                 android:gravity="center_horizontal|center_vertical"
                 android:orientation="horizontal"/>
