--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,16 @@
                 android:text="Add Obstacle"
                 android:textColor="@android:color/white"/>
 
+            <Button
+                android:id="@+id/add_interest_point_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="start"
+                android:layout_weight="1"
+                android:backgroundTint="@android:color/holo_purple"
+                android:text="Interest Point"
+                android:textColor="@android:color/white"/>
+
             <RadioGroup
                 android:id="@+id/select_trajectory_group"
                 android:layout_width="wrap_content"
@@ -56,6 +66,7 @@
                 android:layout_weight="1"
                 android:gravity="center_horizontal|center_vertical"
                 android:orientation="horizontal"/>
+
 
             <Button
                 android:id="@+id/send_button"
